2023-07-06 Franz Holzinger  <franz@ttproducts.de>
    * bugfix: remove wrong error_log statement
    * bugfix: Always use the PHP error log file 'fileadmin/phpDebugErrorLog.txt' if nothing has been set.
    * bugfix: Do not call \JambageCom\Fhdebug\Utility\DebugFunctions::debug without the error object any more, because it is now automatically initialized.

2023-07-05 Franz Holzinger  <franz@ttproducts.de>
    * new feature: auto initialization of the global error object when the debug function is called even before the middleware is executed.

2023-05-10 Franz Holzinger  <franz@ttproducts.de>
    * new feature: add global methods fhdebug, fhdebugBegin and fhdebugEnd
    * compatibility TYPO3 12.4

2022-12-01 Franz Holzinger  <franz@ttproducts.de>
    * compatibility: Migrate extension icon to Resources/Public/Icons/Extension.gif

2022-10-06 Franz Holzinger <franz@ttproducts.de>
    * rename: PatchemHooks.php -> TsparserHooks.php

2022-08-19 Franz Holzinger <franz@ttproducts.de>
    * bugfix: Feature force with group must always give a debug output.

2022-02-24 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8: Remove all htmlspecialchars around an empty string! This leads to unexpected results.

2022-02-11 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 7.4 exception must contain the variable name

2022-02-09 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8 and PHP 7.4

2022-01-19 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The file GlobalDebugFunctions.php must not check if fh_debug has been installed. The Extension Manager is not yet initialized in the beginning.

2022-01-18 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8

2022-01-12 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8
    * new feature: Add ErrorHandler debugger which must be activated in the file LocalConfiguration.php.

2022-01-11 Franz Holzinger <franz@ttproducts.de>
    * It should still work with TYPO3 10.4 and PHP 7.4 as well.