@@ -34,7 +34,7 @@ class CoreProductionExceptionHandler extends \TYPO3\CMS\Core\Error\ProductionExc
      */
     public function echoExceptionWeb(\Throwable $exception)
     {
-        $maxCount = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][FH_DEBUG_EXT]['TRACEDEPTH_EXCEPTION'];
+        $maxCount = $GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['fh_debug']['TRACEDEPTH_EXCEPTION'];
         $trail = $exception->getTrace();
 
         $traceArray =
